# giza-cli

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SUMMARY.md  conftest.py  pyproject.toml
.github/workflows/: onpush.yml  onrelease.yml
docs/: Installation.md  README.md  SUMMARY.md
docs/examples/: basic.md  create_proof.md  full_transpilation.md  reset_password.md
docs/frameworks/: cairo.md  ezkl.md
docs/frameworks/cairo/: README.md  deploy.md  prove.md  transpile.md  verify.md
docs/frameworks/ezkl/: README.md  deploy.md  prove.md  transpile.md  verify.md
docs/reference/api/: README.md  callbacks.md  cli.md  client.md  commands.actions.md  commands.agents.md  commands.deployments.md  commands.endpoints.md  commands.md  commands.models.md  commands.prove.md  commands.reset_password.md  commands.transpile.md  commands.users.md  commands.verify.md  commands.version.md  commands.versions.md  commands.workspaces.md  exceptions.md  frameworks.cairo.md  frameworks.ezkl.md  frameworks.md  options.md  utils.decorators.md  utils.echo.md  utils.enums.md  utils.exception_handling.md  utils.md  utils.misc.md
docs/resources/: agents.md  deployments.md  endpoints.md  models.md  prove.md  transpile.md  users.md  versions.md  workspaces.md
docs/welcome/: Authentication.md  Installation.md  actions.md  authentication.md  frameworks.md  installation.md
examples/: basic.md  reset_password.md
examples/mnist/: mnist_pytorch.ipynb  requirements.txt
frameworks/cairo/: prove.md  verify.md
frameworks/ezkl/: prove.md  transpile.md  verify.md
giza/: __init__.py  __main__.py  callbacks.py  cli.py  client.py  exceptions.py  options.py
giza/cli/: __init__.py  __main__.py  callbacks.py  cli.py  client.py  options.py
giza/cli/commands/: actions.py  agents.py  endpoints.py  models.py  prove.py  reset_password.py  users.py  verify.py  version.py  versions.py  workspaces.py
giza/cli/frameworks/: cairo.py  ezkl.py
giza/cli/schemas/: endpoints.py  jobs.py  logs.py  versions.py
giza/cli/utils/: __init__.py  decorators.py  echo.py  exception_handling.py  misc.py  output.py
giza/commands/: actions.py  agents.py  deployments.py  endpoints.py  ezkl.py  models.py  prove.py  reset_password.py  transpile.py  users.py  verify.py  version.py  versions.py  workspaces.py
giza/frameworks/: cairo.py  ezkl.py
giza/schemas/: agents.py  deployments.py  endpoints.py  jobs.py  message.py  models.py  proofs.py  users.py  verify.py  versions.py  workspaces.py
giza/utils/: __init__.py  decorators.py  echo.py  enums.py  exception_handling.py  misc.py
reference/api/: README.md  commands.deploy.md  commands.md  commands.reset_password.md  commands.transpile.md  commands.users.md  commands.workspaces.md  options.md  utils.decorators.md  utils.enum.md  utils.md
resources/: models.md  users.md  versions.md  workspaces.md
scripts/: create_api_docs.sh
tests/: conftest.py  test_client.py
tests/commands/: test_agents.py  test_deployments.py  test_endpoints.py  test_models.py  test_reset_password.py  test_transpile.py  test_users.py  test_versions.py  test_workspaces.py
tests/utils/: test_decorators.py  test_echo.py  test_init.py  test_misc.py  test_output.py
welcome/: actions.md
